# QRScanner

./: .gitignore  CMakeLists.txt  Makefile  report.html
src/: QRReader.cpp  QRReader.h  QRReportGenerator.cpp  QRReportGenerator.h  main.cpp
